5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4128/executions/1822_1648.log
== TEST (2019-06-13 11:05:57) 
-- CODE:
from numpy import*

a = array(eval(input("notas:")))
b = zeros(size(a)< dtype= int)
i = 0
for x in range(size(a)):
	if a[i] < 70:
		i = i +1
print(i)
-- ERROR:
File "XXXX", line 4
    b = zeros(size(a)< dtype= int)
             ^
SyntaxError: keyword can't be an expression
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:06:15) 
-- CODE:
from numpy import*

a = array(eval(input("notas:")))

b = zeros(size(a), dtype= int)
i = 0
for x in range(size(a)):
	if a[i] < 70:
		i = i +1
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:06:40) 
-- CODE:
from numpy import*

a = array(eval(input("notas:")))

b = zeros(size(a), dtype= int)
i = 0
for x in range(size(a)):
	if a[x] < 70:
		i = i +1
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:08:22) 
-- CODE:
from numpy import*

a = array(eval(input("notas:")))

b = zeros(size(a), dtype= int)
i = 0
for x in range(size(a)):
	if a[x] < 70:
		i = i +1
		b[x] = b[x] + 1
		
		
		
print(b)		
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:12:17) 
-- CODE:
from numpy import*

a = array(eval(input("notas:")))

b = zeros(size(a), dtype= int)
i = 0
for x in range(size(a)):
	if a[x] < 70:
		i = i +1
		b[x] = b[x] + 1
for x in range(size(a)):
	v = arange[b]
		
		
print(v)		
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:12:23) 
-- CODE:
from numpy import*

a = array(eval(input("notas:")))

b = zeros(size(a), dtype= int)
i = 0
for x in range(size(a)):
	if a[x] < 70:
		i = i +1
		b[x] = b[x] + 1
for x in range(size(a)):
	v = range[b]
		
		
print(v)		
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:12:33) 
-- CODE:
from numpy import*

a = array(eval(input("notas:")))

b = zeros(size(a), dtype= int)
i = 0
for x in range(size(a)):
	if a[x] < 70:
		i = i +1
		b[x] = b[x] + 1
for x in range(size(a)):
	v = range(b)
		
		
print(v)		
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:12:40) 
-- CODE:
from numpy import*

a = array(eval(input("notas:")))

b = zeros(size(a), dtype= int)
i = 0
for x in range(size(a)):
	if a[x] < 70:
		i = i +1
		b[x] = b[x] + 1
for x in range(size(a)):
	v = arange(b)
		
		
print(v)		
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:15:00) 
-- CODE:
from numpy import*

a = array(eval(input("notas:")))

b = zeros(size(a), dtype= int)
i = 0
for x in range(size(a)):
	if a[x] < 70:
		i = i +1
		b[x] = b[x] + 1
	
print(i)
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:16:11) 
-- CODE:
from numpy import*

a = array(eval(input("notas:")))

b = zeros(size(a), dtype= int)
i = 0
for x in range(size(a)):
	if a[x] < 70:
		i = i +1
		b[x] = b[x] + 1
for x in range(size(b))
	if b[x] > 0:
		b[x] = b[x] + 1
print(i)
print(b)
-- ERROR:
File "XXXX", line 11
    for x in range(size(b))
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:16:16) 
-- CODE:
from numpy import*

a = array(eval(input("notas:")))

b = zeros(size(a), dtype= int)
i = 0
for x in range(size(a)):
	if a[x] < 70:
		i = i +1
		b[x] = b[x] + 1
for x in range(size(b)):
	if b[x] > 0:
		b[x] = b[x] + 1
print(i)
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:17:55) 
-- CODE:
from numpy import*

a = array(eval(input("notas:")))

b = zeros(size(a), dtype= int)
i = 0
for x in range(size(a)):
	if a[x] < 70:
		i = i +1
		b[x] = b[x] + 1
for x in range(size(b)):
	if b[x] > 0:
		b[x] = b[x] + 1
print(i)
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 11:20:26) 
-- CODE:
from numpy import*

a = array(eval(input("notas:")))

b = zeros(size(a), dtype= int)
i = 0
for x in range(size(a)):
	if a[x] < 70:
		i = i +1
		b[x] = b[x] + 1
for x in range(size(b)):
	if b[x] != 0:
		
		
print(i)
print(b)
-- EXECUTION TIME:
0.817713
-- ERROR:
  File "/home/codebench/codes/1822/1648/main.py", line 15
    print(i)
    ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:20:27) 
-- CODE:
from numpy import*

a = array(eval(input("notas:")))

b = zeros(size(a), dtype= int)
i = 0
for x in range(size(a)):
	if a[x] < 70:
		i = i +1
		b[x] = b[x] + 1
for x in range(size(b)):
	if b[x] != 0:
		
		
print(i)
print(b)
-- ERROR:
File "XXXX", line 15
    print(i)
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:20:32) 
-- CODE:
from numpy import*

a = array(eval(input("notas:")))

b = zeros(size(a), dtype= int)
i = 0
for x in range(size(a)):
	if a[x] < 70:
		i = i +1
		b[x] = b[x] + 1
for x in range(size(b)):
	if b[x] != 0:
		
		
print(i)
print(b)
-- ERROR:
File "XXXX", line 15
    print(i)
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:20:37) 
-- CODE:
from numpy import*

a = array(eval(input("notas:")))

b = zeros(size(a), dtype= int)
i = 0
for x in range(size(a)):
	if a[x] < 70:
		i = i +1
		b[x] = b[x] + 1
for x in range(size(b)):
	if b[x] != 0:
		
		
print(i)
print(b)
-- ERROR:
File "XXXX", line 15
    print(i)
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:20:44) 
-- CODE:
from numpy import*

a = array(eval(input("notas:")))

b = zeros(size(a), dtype= int)
i = 0
for x in range(size(a)):
	if a[x] < 70:
		i = i +1
		b[x] = b[x] + 1
for x in range(size(b)):
	if b[x] != 0:
		
print(i)
print(b)
-- ERROR:
File "XXXX", line 14
    print(i)
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:21:36) 
-- CODE:
from numpy import*

a = array(eval(input("notas:")))

b = zeros(size(a), dtype= int)
i = 0
for x in range(size(a)):
	if a[x] < 70:
		i = i +1
		b[x] = b[x] + 1
for x in range(size(b)):
	if b[x] != 0:
		
print(i)
print(b)
-- ERROR:
File "XXXX", line 14
    print(i)
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:21:52) 
-- CODE:
from numpy import*

a = array(eval(input("notas:")))

b = zeros(size(a), dtype= int)
i = 0
for x in range(size(a)):
	if a[x] < 70:
		i = i +1
		b[x] = b[x] + 1
for x in range(size(b)):
	if b[x] != 0:
		
print(i)
print(b)
-- ERROR:
File "XXXX", line 14
    print(i)
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:22:06) 
-- CODE:
from numpy import*

a = array(eval(input("notas:")))

b = zeros(size(a), dtype= int)
i = 0
for x in range(size(a)):
	if a[x] < 70:
		i = i +1
		b[x] = b[x] + 1
for x in range(size(b)):
	if b[x] != 0:
	
print(i)
print(b)
-- ERROR:
File "XXXX", line 14
    print(i)
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:22:47) 
-- CODE:
from numpy import*

a = array(eval(input("notas:")))

b = zeros(size(a), dtype= int)
i = 0
for x in range(size(a)):
	if a[x] < 70:
		i = i +1
		b[x] = b[x] + 1
for x in range(size(b)):
	if b[x] != 0:
		b[x] = b[x]  + 2
print(i)
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:23:19) 
-- CODE:
from numpy import*

a = array(eval(input("notas:")))

b = zeros(size(a), dtype= int)
i = 0
for x in range(size(a)):
	if a[x] < 70:
		i = i +1
		b[x] = b[x] + 1
for x in range(b):
	if b[x] != 0:
		b[x] = b[x]  + 2
print(i)
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:23:29) 
-- CODE:
from numpy import*

a = array(eval(input("notas:")))

b = zeros(size(a), dtype= int)
i = 0
for x in range(size(a)):
	if a[x] < 70:
		i = i +1
		b[x] = b[x] + 1
for x in (b):
	if b[x] != 0:
		b[x] = b[x]  + 2
print(i)
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:25:48) 
-- CODE:
from numpy import*

a = array(eval(input("notas:")))

b = zeros(size(a), dtype= int)
i = 0
for x in range(size(a)):
	if a[x] < 70:
		i = i +1
		b[x] = b[x] + 1
for x in range(size(b)):
	if b[x] != 0:
		x = max(b)
		y = min(b)
print(i)
print(b)
print(x)
print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:25:48) 
-- CODE:
from numpy import*

a = array(eval(input("notas:")))

b = zeros(size(a), dtype= int)
i = 0
for x in range(size(a)):
	if a[x] < 70:
		i = i +1
		b[x] = b[x] + 1
for x in range(size(b)):
	if b[x] != 0:
		x = max(b)
		y = min(b)
print(i)
print(b)
print(x)
print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:25:48) 
-- CODE:
from numpy import*

a = array(eval(input("notas:")))

b = zeros(size(a), dtype= int)
i = 0
for x in range(size(a)):
	if a[x] < 70:
		i = i +1
		b[x] = b[x] + 1
for x in range(size(b)):
	if b[x] != 0:
		x = max(b)
		y = min(b)
print(i)
print(b)
print(x)
print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:25:48) 
-- CODE:
from numpy import*

a = array(eval(input("notas:")))

b = zeros(size(a), dtype= int)
i = 0
for x in range(size(a)):
	if a[x] < 70:
		i = i +1
		b[x] = b[x] + 1
for x in range(size(b)):
	if b[x] != 0:
		x = max(b)
		y = min(b)
print(i)
print(b)
print(x)
print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:25:48) 
-- CODE:
from numpy import*

a = array(eval(input("notas:")))

b = zeros(size(a), dtype= int)
i = 0
for x in range(size(a)):
	if a[x] < 70:
		i = i +1
		b[x] = b[x] + 1
for x in range(size(b)):
	if b[x] != 0:
		x = max(b)
		y = min(b)
print(i)
print(b)
print(x)
print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:25:48) 
-- CODE:
from numpy import*

a = array(eval(input("notas:")))

b = zeros(size(a), dtype= int)
i = 0
for x in range(size(a)):
	if a[x] < 70:
		i = i +1
		b[x] = b[x] + 1
for x in range(size(b)):
	if b[x] != 0:
		x = max(b)
		y = min(b)
print(i)
print(b)
print(x)
print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:25:48) 
-- CODE:
from numpy import*

a = array(eval(input("notas:")))

b = zeros(size(a), dtype= int)
i = 0
for x in range(size(a)):
	if a[x] < 70:
		i = i +1
		b[x] = b[x] + 1
for x in range(size(b)):
	if b[x] != 0:
		x = max(b)
		y = min(b)
print(i)
print(b)
print(x)
print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:25:48) 
-- CODE:
from numpy import*

a = array(eval(input("notas:")))

b = zeros(size(a), dtype= int)
i = 0
for x in range(size(a)):
	if a[x] < 70:
		i = i +1
		b[x] = b[x] + 1
for x in range(size(b)):
	if b[x] != 0:
		x = max(b)
		y = min(b)
print(i)
print(b)
print(x)
print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:25:48) 
-- CODE:
from numpy import*

a = array(eval(input("notas:")))

b = zeros(size(a), dtype= int)
i = 0
for x in range(size(a)):
	if a[x] < 70:
		i = i +1
		b[x] = b[x] + 1
for x in range(size(b)):
	if b[x] != 0:
		x = max(b)
		y = min(b)
print(i)
print(b)
print(x)
print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:25:48) 
-- CODE:
from numpy import*

a = array(eval(input("notas:")))

b = zeros(size(a), dtype= int)
i = 0
for x in range(size(a)):
	if a[x] < 70:
		i = i +1
		b[x] = b[x] + 1
for x in range(size(b)):
	if b[x] != 0:
		x = max(b)
		y = min(b)
print(i)
print(b)
print(x)
print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:25:48) 
-- CODE:
from numpy import*

a = array(eval(input("notas:")))

b = zeros(size(a), dtype= int)
i = 0
for x in range(size(a)):
	if a[x] < 70:
		i = i +1
		b[x] = b[x] + 1
for x in range(size(b)):
	if b[x] != 0:
		x = max(b)
		y = min(b)
print(i)
print(b)
print(x)
print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:25:49) 
-- CODE:
from numpy import*

a = array(eval(input("notas:")))

b = zeros(size(a), dtype= int)
i = 0
for x in range(size(a)):
	if a[x] < 70:
		i = i +1
		b[x] = b[x] + 1
for x in range(size(b)):
	if b[x] != 0:
		x = max(b)
		y = min(b)
print(i)
print(b)
print(x)
print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:26:31) 
-- CODE:
from numpy import*

a = array(eval(input("notas:")))

b = zeros(size(a), dtype= int)
i = 0
for x in range(size(a)):
	if a[x] < 70:
		i = i +1
		b[x] = b[x] + 1
for x in range(size(b)):
	if b[x] != 0:
		b = [0:-1]
		
print(i)
print(b)

-- ERROR:
File "XXXX", line 13
    b = [0:-1]
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:26:35) 
-- CODE:
from numpy import*

a = array(eval(input("notas:")))

b = zeros(size(a), dtype= int)
i = 0
for x in range(size(a)):
	if a[x] < 70:
		i = i +1
		b[x] = b[x] + 1
for x in range(size(b)):
	if b[x] != 0:
		b = [0;-1]
		
print(i)
print(b)

-- ERROR:
File "XXXX", line 13
    b = [0;-1]
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:26:43) 
-- CODE:
from numpy import*

a = array(eval(input("notas:")))

b = zeros(size(a), dtype= int)
i = 0
for x in range(size(a)):
	if a[x] < 70:
		i = i +1
		b[x] = b[x] + 1
for x in range(size(b)):
	if b[x] != 0:
		b = [:-1]
		
print(i)
print(b)

-- ERROR:
File "XXXX", line 13
    b = [:-1]
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:45:41) 
-- CODE:
from numpy import*

a = array(eval(input("notas:")))

b = zeros(size(a), dtype= int)
i = 0
for x in range(size(a)):
	if a[x] < 70:
		i = i +1
		b[x] = b[x] + 1
for x in range(size(b)):
	if b[x] != 0:
		
		
print(i)
print(b)

-- ERROR:
File "XXXX", line 15
    print(i)
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:45:58) 
-- CODE:
from numpy import*

a = array(eval(input("notas:")))

b = zeros(size(a), dtype= int)
i = 0
for x in range(size(a)):
	if a[x] < 70:
		i = i +1
		b[x] = b[x] + 1
for x in range(size(b)):
	if b[x] != 0:
		b[x] = b + 1
		
print(i)
print(b)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:46:15) 
-- CODE:
from numpy import*

a = array(eval(input("notas:")))

b = zeros(size(a), dtype= int)
i = 0
for x in range(size(a)):
	if a[x] < 70:
		i = i +1
		b[x] = b[x] + 1
for z in range(size(b)):
	if b[z] != 0:
		b[z] = b[z] + 1
		
print(i)
print(b)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:46:36) 
-- CODE:
from numpy import*

a = array(eval(input("notas:")))

b = zeros(size(a), dtype= int)
i = 0
for x in range(size(a)):
	if a[x] < 70:
		i = i +1
		b[x] = b[x] + 1
for z in range(size(b)):
	if b[z] != 0:
		b[z] = b[z] + 1
		
print(i)
print(b)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 11:47:37) 
-- CODE:
from numpy import*

a = array(eval(input("notas:")))

b = zeros(size(a), dtype= int)
i = 0
for x in range(size(a)):
	if a[x] < 70:
		i = i +1
		b[x] = b[x] + 1
for z in range(size(b)):
	if b[z] != 0:
		b[z] = b[z] + 1
		
print(i)
print(b)

-- EXECUTION TIME:
0.763936
-- TEST CASE 1:
---- input:
[20,35,70,75,45,85]
---- correct output:
3
[0 1 4]
---- user output:
3
[2 2 0 0 2 0]
-- TEST CASE 2:
---- input:
[70,65,35,70,75,45,85]
---- correct output:
3
[1 2 5]
---- user output:
3
[0 2 2 0 0 2 0]
-- TEST CASE 3:
---- input:
[70,65,35]
---- correct output:
2
[1 2]
---- user output:
2
[0 2 2]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:47:48) 
-- CODE:
from numpy import*

a = array(eval(input("notas:")))

b = zeros(size(a), dtype= int)
i = 0
for x in range(size(a)):
	if a[x] < 70:
		i = i +1
		b[x] = b[x] + 1
for z in range(size(b)):
	if b[z] != 0:
		b[z] = b[z] + 1
		
print(i)
print(b)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:49:23) 
-- CODE:
from numpy import*

a = array(eval(input("notas:")))

b = zeros(size(a), dtype= int)
i = 0
for x in range(size(a)):
	if a[x] < 70:
		i = i +1
		b[x] = b[x] + 1
for z in range(size(b)):
	if b[z] != 0:
		x = zeros(size(b),dtype=int)
		x[z] = x[z] + 1
print(i)
print(x)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:50:49) 
-- CODE:
from numpy import*

a = array(eval(input("notas:")))

b = zeros(size(a), dtype= int)
i = 0
for x in range(size(a)):
	if a[x] < 70:
		i = i +1
		b[x] = b[x] + 1
for z in range(size(b)):
	if b[z] != 0:
		x = zeros(size(a),dtype=int)
		x[z] = x[z] + 1
print(i)
print(x)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:51:29) 
-- CODE:
from numpy import*

a = array(eval(input("notas:")))

b = zeros(size(a), dtype= int)
i = 0
for x in range(size(a)):
	if a[x] < 70:
		i = i +1
		b[x] = b[x] + 1
for z in range(size(b)):
	if b[z] != 0:
		
	
print(b)
print(x)

-- ERROR:
File "XXXX", line 15
    print(b)
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:54:32) 
-- CODE:
from numpy import*

a = array(eval(input("notas:")))


i = 0
for i in range(size(a)):
	if a[i] < 70:
		i = i +1
	
b = zeros(i,dtype=int)
j  = 0
for i in range(size(a)):
	if a[i] != 0:
		b[j] = i
		j = j + 1
print(b)
print(x)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
